# gaeb-parser

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_xml_gaeb_parser.py
.github/workflows/: python-publish.yml
gaeb_parser/: xml_gaeb_parser.py
official_tests_gaeb_da_xml_3_3/bauausfuehrung/: BVBS_Pruefdatei GAEB DA XML 3.3 - Bauausfuehrung - V 11 06 2021.x84
tests/: test_xml_gaeb_parser.py
tests/official_tests_gaeb_da_xml_3_3/bauausfuehrung/: Pruefdatei GAEB DA XML 3.3 - Bauausfuehrung - V 04 04 2024.x83
tests/official_tests_gaeb_da_xml_3_3/texterstellung/: GAEB Pruefdatei GAEB DA XML 3.3 - Texterstellung V 11 06 2021.x81  GAEB Pruefdatei GAEB DA XML 3.3 - Texterstellung V 11 06 2021.x82
