[project]
name = "xml-gaeb-parser"
version = "0.1.0"
description = "parses xml gaeb files and converts them to a pandas dataframe"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas >=1.3.0",
    "beautifulsoup4 >=4.10.0"
    "lxml>=5.4.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
